--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body {
     flex-direction: column;
     background-color: var(--bg);
     min-height: 100vh;
+    margin-top: 3rem;
 }
 
 input,
@@ -63,6 +64,10 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
     background-color: var(--bg-header);
 }
 
@@ -110,7 +115,7 @@ nav .btn-cta-highlight:hover {
     background-size: cover;
     background-attachment: fixed;
     padding: 5rem;
-    font-size: 1.5rem;
+    font-size: clamp(0.7rem, 2vw, 5.5rem);
     height: 80vh;
 }
 
@@ -147,7 +152,8 @@ nav .btn-cta-highlight:hover {
     grid-column-end: 3;
     place-items: center;
     display: grid;
-    font-size: 5rem;
+    font-size: clamp(2rem, 7vw + 2rem, 5rem);
+
 }
 
 
@@ -272,10 +278,17 @@ footer {
 }
 
 @media (max-width: 800px) {
+
+    body {
+        margin-top: 0;
+    }
+
     header {
         flex-direction: column;
         gap: 1rem;
         padding: 1rem;
+        position: static;
+        width: auto;
     }
 
     nav {
@@ -309,7 +322,6 @@ footer {
         padding: 2rem 1rem;
         text-align: center;
         margin: auto;
-        font-size: 0.5rem;
         height: auto;
     }
 
@@ -327,7 +339,6 @@ footer {
     .service-content>.service-title {
         grid-column: 1;
         text-align: center;
-        font-size: 2.5rem;
         height: auto;
     }
 
